<resources>
    <string name="app_name">PikakabatYaSalitaDictionary</string>
    <string name="title_activity_home">Activity_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_trivia">Pangasinan Trivia</string>
    <string name="menu_pang2eng">Pangasinan - English</string>
    <string name="menu_eng2pang">English - Pangasinan</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_bookmarks">Favorite</string>
    <string name="menu_system">System</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_wordList">List of Words</string>
</resources>