<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_trivia"
            android:icon="@drawable/ic_baseline_trivia"
            android:title="@string/menu_trivia" />

        <item android:title="@string/menu_dictionary">
            <menu>
                <item
                    android:id="@+id/nav_search"
                    android:icon="@drawable/ic_baseline_search"
                    android:title="@string/menu_wordList" />

                <item
                    android:id="@+id/nav_pang2eng"
                    android:icon="@drawable/ic_baseline_dictionary"
                    android:title="@string/menu_pang2eng" />
                <item
                    android:id="@+id/nav_eng2pang"
                    android:icon="@drawable/ic_baseline_dictionary"
                    android:title="@string/menu_eng2pang" />

            </menu>
        </item>

        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_baseline_recent"
            android:title="@string/menu_recent" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_baseline_bookmark"
            android:title="@string/menu_bookmarks" />

        <item android:title="@string/menu_system">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_baseline_about"
                    android:title="@string/menu_about" />

            </menu>

        </item>
    </group>
</menu>