<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pikakabatyasalitadictionary.Fragment.Fragment_Dashboard"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dashboard">

    </fragment>

    <fragment
        android:id="@+id/nav_recent"
        android:name="org.sticollegeandroidprojects.dictionary.Fragment.Fragment_RecentWords"
        android:label="@string/menu_recent"
        tools:layout="@layout/fragment_recent_words" />

    <fragment
        android:id="@+id/nav_bookmark"
        android:name="org.sticollegeandroidprojects.dictionary.Fragment.Fragment_Bookmarks"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.pikakabatyasalitadictionary.Fragment.Fragment_About"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>